<resources>
    <string name="app_name">My Application</string>
    <string name="next">Next</string>
    <string name="second_form_name">User Detail</string>
    <string name="user_name">Name : Abhishek</string>
    <string name="user_address">Address : 445 somwar peth pune</string>
    <string name="user_mob">Mobile No : 8983046111</string>
    <string name="btn_msg">Show Current Date</string>
    <string name="uplaod">Uplaod</string>
    <string name="download">Download</string>
    <string name="title_activity_home_drawer_example">HomeDrawerExample</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Abhi Waikar</string>
    <string name="nav_header_subtitle">abhi.waiakr@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="fragment" />
    <string name="constranin_layout">Constraint Layout</string>
    <string name="messenger_service">Messenger Service</string>
    <string name="ibinder_service">Ibinder Service</string>
    <string name="bottom_sheet">Bottom Shit</string>
    <string name="fragment_demo">Fragment Demo</string>
</resources>
